--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,3 +107,154 @@ a.Command:hover{text-decoration:none;font-family:"Segoe UI";color:#e95916;font-s
 .button{
 	color:#0f5ef1;
 }
+
+
+
+/* Adminhome */
+
+body {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	background-color: rgb(247, 246, 252);
+	color: rgb(70, 71, 81);
+	font-family: 'Open Sans', sans-serif;
+  }
+  
+  .material-icons-outlined {
+	vertical-align: middle;
+	line-height: 1px;
+	font-size: 30px;
+  }
+  
+  .grid-container {
+	display: grid;
+	grid-template-columns: 260px 1fr 1fr 1fr;
+	grid-template-rows: 0.2fr 3fr;
+	grid-template-areas:
+	  'sidebar header header header'
+	  'sidebar main main main';
+	height: 100vh;
+  }
+  
+  
+  /* ---------- HEADER ---------- */
+  .header {
+	grid-area: header;
+	height: 70px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 30px 0 30px;
+	box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+	font-size: 50px;
+  }
+  
+  
+  /* ---------- End HEADER ---------- */
+  
+  
+  
+  /* ---------- SIDEBAR ---------- */
+  
+  #sidebar {
+	grid-area: sidebar;
+	height: 100%;
+	background-color: rgb(29, 38, 154);
+	color: rgb(255, 255, 255);
+	overflow-y: auto;
+	transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+  }
+  
+  .sidebar-title {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px 20px 20px 20px;
+	margin-bottom: 30px;
+  }
+  
+  .sidebar-brand {
+	margin-top: 15px;
+	font-size: 30px;
+	font-weight: 700;
+  }
+  
+  .sidebar-brand > .material-icons-outlined {
+	font-size: 50px;
+  }
+  
+  .sidebar-list {
+	padding: 0;
+	margin-top: 15px;
+	list-style-type: none;
+  }
+  
+  .sidebar-list-item {
+	padding: 20px 20px 20px 20px;
+	font-size: 18px;
+  }
+  
+  .sidebar-list-item:hover {
+	background-color: rgba(255, 255, 255, 0.2);
+	cursor: pointer;
+  }
+  
+  .sidebar-list-item > a {
+	text-decoration: none;
+	color: rgb(180, 184, 244);
+  }
+  
+  /* ---------- MAIN ---------- */
+  
+  .main-container {
+	grid-area: main;
+	overflow-y: auto;
+	padding: 20px 20px;
+  }
+  
+  .main-title {
+	display: flex;
+	justify-content: space-between;
+  }
+  
+  .main-cards {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	gap: 20px;
+	margin: 20px 0;
+  }
+  
+  .card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	padding: 25px;
+	color: rgb(255, 255, 255);
+	border-radius: 30px;
+	box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+  }
+  
+  .card:first-child {
+	background-color: rgb(213, 0, 0);
+  }
+  
+  .card:nth-child(2) {
+	background-color: rgb(46, 125, 50);
+  }
+  
+  .card:nth-child(3) {
+	background-color: rgb(255, 111, 0);
+  }
+  
+  .card:nth-child(4) {
+	background-color: rgb(29, 38, 154);
+  }
+  
+  .card-inner {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+  }
+  
