--- a/stylesheet.css
+++ b/stylesheet.css
@@ -221,7 +221,7 @@ body {
   
   .main-cards {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	gap: 20px;
 	margin: 20px 0;
   }
@@ -250,6 +250,9 @@ body {
   
   .card:nth-child(4) {
 	background-color: rgb(29, 38, 154);
+  }
+  .card:nth-child(5) {
+	background-color: rgb(117, 21, 117);
   }
   
   .card-inner {
